--- a/App/Voltflow/Views/Forms/PasswordResetForm.axaml
+++ b/App/Voltflow/Views/Forms/PasswordResetForm.axaml
@@ -1,5 +1,5 @@
 <UserControl
-    x:Class="Voltflow.Views.SignInFormView"
+    x:Class="Voltflow.Views.Forms.PasswordResetForm"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,12 +15,12 @@
     </Design.DataContext>
 
     <UserControl.Resources>
-        <!--  AuthTypeConverter returns whether AuthType set in AuthViewModel is the same as here, which is AuthType.SignIn.  -->
+        <!--  AuthTypeConverter checks if CurrentAuthType is AuthType.PasswordReset.  -->
         <models:AuthTypeConverter x:Key="AuthTypeConverter" />
     </UserControl.Resources>
 
     <!--  Form  -->
-    <StackPanel IsVisible="{Binding AuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=SignIn}">
+    <StackPanel IsEnabled="{Binding !PasswordResetForm.Working}" IsVisible="{Binding CurrentAuthType, Converter={StaticResource AuthTypeConverter}, ConverterParameter=PasswordReset}">
         <!--  Email input  -->
         <StackPanel Classes="sm-spacing" Orientation="Horizontal">
             <iconPacks:PackIconBootstrapIcons
@@ -30,21 +30,8 @@
                 Kind="EnvelopeFill" />
             <TextBlock Classes="size-sm color-gray weight-bold" Text="Email" />
         </StackPanel>
-        <TextBox
-            IsEnabled="{Binding !Authenticating}"
-            Text="{Binding SignInForm.Email}"
-            Watermark="example@gmail.com" />
 
-        <!--  Password input  -->
-        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconBootstrapIcons
-                VerticalAlignment="Center"
-                Classes="size-sm color-gray"
-                IsVisible="True"
-                Kind="ShieldLockFill" />
-            <TextBlock Classes="size-sm color-gray weight-bold" Text="Password" />
-        </StackPanel>
-        <Grid>
+        <Grid IsEnabled="{Binding !PasswordResetForm.SentToken}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="4" />
@@ -53,23 +40,65 @@
 
             <TextBox
                 Grid.Column="0"
-                IsEnabled="{Binding !Authenticating}"
+                Text="{Binding PasswordResetForm.Email}"
+                Watermark="example@gmail.com" />
+
+            <Button Grid.Column="2" Command="{Binding GetResetPasswordToken}">
+                <iconPacks:PackIconBootstrapIcons
+                    VerticalAlignment="Center"
+                    IsVisible="{Binding !PasswordResetForm.ShowPassword}"
+                    Kind="SendFill" />
+            </Button>
+        </Grid>
+
+        <!--  Token input  -->
+        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+            <iconPacks:PackIconBootstrapIcons
+                VerticalAlignment="Center"
+                Classes="size-sm color-gray"
+                IsVisible="True"
+                Kind="KeyFill" />
+            <TextBlock Classes="size-sm color-gray weight-bold" Text="Token" />
+        </StackPanel>
+        <TextBox
+            IsEnabled="{Binding PasswordResetForm.SentToken}"
+            Text="{Binding PasswordResetForm.Token}"
+            Watermark="Enter received token here" />
+
+        <!--  Password input  -->
+        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+            <iconPacks:PackIconBootstrapIcons
+                VerticalAlignment="Center"
+                Classes="size-sm color-gray"
+                IsVisible="True"
+                Kind="ShieldLockFill" />
+            <TextBlock Classes="size-sm color-gray weight-bold" Text="New Password" />
+        </StackPanel>
+        <Grid IsEnabled="{Binding PasswordResetForm.SentToken}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="4" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+            <TextBox
+                Grid.Column="0"
                 MaxLength="32"
                 PasswordChar="*"
-                RevealPassword="{Binding ShowPassword}"
-                Text="{Binding SignInForm.Password}"
+                RevealPassword="{Binding PasswordResetForm.ShowPassword}"
+                Text="{Binding PasswordResetForm.Password}"
                 Watermark="Example123@" />
 
-            <Button Grid.Column="2" Command="{Binding RevealPassword}">
+            <Button Grid.Column="2" Command="{Binding PasswordResetForm.TogglePassword}">
                 <StackPanel>
                     <iconPacks:PackIconBootstrapIcons
                         VerticalAlignment="Center"
-                        IsVisible="{Binding !ShowPassword}"
+                        IsVisible="{Binding !PasswordResetForm.ShowPassword}"
                         Kind="EyeFill" />
 
                     <iconPacks:PackIconBootstrapIcons
                         VerticalAlignment="Center"
-                        IsVisible="{Binding ShowPassword}"
+                        IsVisible="{Binding PasswordResetForm.ShowPassword}"
                         Kind="EyeSlashFill" />
                 </StackPanel>
             </Button>
@@ -89,8 +118,7 @@
                 Grid.Column="0"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
-                Command="{Binding NavigateHome}"
-                IsEnabled="{Binding !Authenticating}">
+                Command="{Binding NavigateBack}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconBootstrapIcons
                         Width="16"
@@ -106,38 +134,17 @@
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
                 Classes="color-green"
-                Command="{Binding ValidateSignIn}"
-                IsEnabled="{Binding !Authenticating}">
+                Command="{Binding ResetPassword}"
+                IsEnabled="{Binding PasswordResetForm.SentToken}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconBootstrapIcons
                         Width="16"
                         Height="16"
                         VerticalAlignment="Center"
                         Kind="Check2" />
-                    <TextBlock VerticalAlignment="Center" Text="Sign In" />
+                    <TextBlock VerticalAlignment="Center" Text="Reset" />
                 </StackPanel>
             </Button>
         </Grid>
-
-        <!--  Hyperlink which hides this form and shows SignUp form.  -->
-        <StackPanel
-            Margin="0,16,0,0"
-            HorizontalAlignment="Center"
-            Orientation="Horizontal"
-            Spacing="4">
-            <TextBlock Classes="size-sm" Text="Don't have an account?" />
-            <TextBlock
-                x:Name="SignUpHyperlink"
-                Classes="size-sm hyperlink"
-                IsEnabled="{Binding !Authenticating}"
-                Text="Sign up here!"
-                TextDecorations="Underline">
-                <Interaction.Behaviors>
-                    <EventTriggerBehavior EventName="PointerPressed" SourceObject="{Binding #SignUpHyperlink}">
-                        <InvokeCommandAction Command="{Binding SwitchForms}" />
-                    </EventTriggerBehavior>
-                </Interaction.Behaviors>
-            </TextBlock>
-        </StackPanel>
     </StackPanel>
 </UserControl>
