Add half done adding stations in app

--- a/App/Voltflow/Views/AuthView.axaml
+++ b/App/Voltflow/Views/AuthView.axaml
@@ -18,7 +18,8 @@
         HorizontalAlignment="Stretch"
         VerticalAlignment="Center"
         Classes="no-spacing">
-        <!--  Store all forms here (I split them into each file so the code here looks *clean*). Each form knows when to display because of AuthTypeConverter and set AuthType in AuthViewModel.  -->
+        <!--  Store all forms here (I split them into each file so the code here looks *clean*). 
+		Each form knows when to display because of AuthTypeConverter and set AuthType in AuthViewModel.  -->
         <forms:SignUpForm />
         <forms:SignInForm />
         <forms:TwoFactorAuthForm />
