--- a/App/Voltflow/Styles/TextBlockStyle.axaml
+++ b/App/Voltflow/Styles/TextBlockStyle.axaml
@@ -5,11 +5,17 @@
                 <!--  Light Theme  -->
                 <ResourceDictionary x:Key="Light">
                     <SolidColorBrush x:Key="ForegroundGray" Color="DimGray" />
+                    <SolidColorBrush x:Key="ForegroundGrayDisabled" Color="LightGray" />
+                    <SolidColorBrush x:Key="ForegroundHyperlink" Color="LightSkyBlue" />
+                    <SolidColorBrush x:Key="ForegroundHyperlinkDisabled" Color="#c4e9ff" />
                 </ResourceDictionary>
 
                 <!--  Dark Theme  -->
                 <ResourceDictionary x:Key="Dark">
                     <SolidColorBrush x:Key="ForegroundGray" Color="LightGray" />
+                    <SolidColorBrush x:Key="ForegroundGrayDisabled" Color="DimGray" />
+                    <SolidColorBrush x:Key="ForegroundHyperlink" Color="LightSkyBlue" />
+                    <SolidColorBrush x:Key="ForegroundHyperlinkDisabled" Color="#537991" />
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
@@ -50,9 +56,20 @@
         <Setter Property="Foreground" Value="{DynamicResource ForegroundGray}" />
     </Style>
 
+    <!--  Gray disabled TextBlock  -->
+    <Style Selector="TextBlock.color-gray:disabled">
+        <Setter Property="Foreground" Value="{DynamicResource ForegroundGrayDisabled}" />
+    </Style>
+
     <!--  Hyperlink TextBlock  -->
     <Style Selector="TextBlock.hyperlink">
-        <Setter Property="Foreground" Value="LightSkyBlue" />
+        <Setter Property="Foreground" Value="{DynamicResource ForegroundHyperlink}" />
+        <Setter Property="FontWeight" Value="Bold" />
+    </Style>
+
+    <!--  Hyperlink disabled TextBlock  -->
+    <Style Selector="TextBlock.hyperlink:disabled">
+        <Setter Property="Foreground" Value="{DynamicResource ForegroundHyperlinkDisabled}" />
         <Setter Property="FontWeight" Value="Bold" />
     </Style>
 </Styles>
