--- a/App/Voltflow/Views/Forms/PasswordResetForm.axaml
+++ b/App/Voltflow/Views/Forms/PasswordResetForm.axaml
@@ -34,7 +34,7 @@
         <Grid IsEnabled="{Binding !PasswordResetForm.SentToken}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="4" />
+                <ColumnDefinition Width="8" />
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
@@ -52,57 +52,58 @@
         </Grid>
 
         <!--  Token input  -->
-        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconBootstrapIcons
-                VerticalAlignment="Center"
-                Classes="size-sm color-gray"
-                IsVisible="True"
-                Kind="KeyFill" />
-            <TextBlock Classes="size-sm color-gray weight-bold" Text="Token" />
+        <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
+            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+                <iconPacks:PackIconBootstrapIcons
+                    VerticalAlignment="Center"
+                    Classes="size-sm color-gray"
+                    IsVisible="True"
+                    Kind="KeyFill" />
+                <TextBlock Classes="size-sm color-gray weight-bold" Text="Token" />
+            </StackPanel>
+            <TextBox Text="{Binding PasswordResetForm.Token}" Watermark="Enter received token here" />
         </StackPanel>
-        <TextBox
-            IsEnabled="{Binding PasswordResetForm.SentToken}"
-            Text="{Binding PasswordResetForm.Token}"
-            Watermark="Enter received token here" />
 
         <!--  Password input  -->
-        <StackPanel Classes="sm-spacing" Orientation="Horizontal">
-            <iconPacks:PackIconBootstrapIcons
-                VerticalAlignment="Center"
-                Classes="size-sm color-gray"
-                IsVisible="True"
-                Kind="ShieldLockFill" />
-            <TextBlock Classes="size-sm color-gray weight-bold" Text="New Password" />
+        <StackPanel IsEnabled="{Binding PasswordResetForm.SentToken}">
+            <StackPanel Classes="sm-spacing" Orientation="Horizontal">
+                <iconPacks:PackIconBootstrapIcons
+                    VerticalAlignment="Center"
+                    Classes="size-sm color-gray"
+                    IsVisible="True"
+                    Kind="ShieldLockFill" />
+                <TextBlock Classes="size-sm color-gray weight-bold" Text="New Password" />
+            </StackPanel>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="8" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <TextBox
+                    Grid.Column="0"
+                    MaxLength="32"
+                    PasswordChar="*"
+                    RevealPassword="{Binding PasswordResetForm.ShowPassword}"
+                    Text="{Binding PasswordResetForm.Password}"
+                    Watermark="Example123@" />
+
+                <Button Grid.Column="2" Command="{Binding PasswordResetForm.TogglePassword}">
+                    <StackPanel>
+                        <iconPacks:PackIconBootstrapIcons
+                            VerticalAlignment="Center"
+                            IsVisible="{Binding !PasswordResetForm.ShowPassword}"
+                            Kind="EyeFill" />
+
+                        <iconPacks:PackIconBootstrapIcons
+                            VerticalAlignment="Center"
+                            IsVisible="{Binding PasswordResetForm.ShowPassword}"
+                            Kind="EyeSlashFill" />
+                    </StackPanel>
+                </Button>
+            </Grid>
         </StackPanel>
-        <Grid IsEnabled="{Binding PasswordResetForm.SentToken}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="4" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-
-            <TextBox
-                Grid.Column="0"
-                MaxLength="32"
-                PasswordChar="*"
-                RevealPassword="{Binding PasswordResetForm.ShowPassword}"
-                Text="{Binding PasswordResetForm.Password}"
-                Watermark="Example123@" />
-
-            <Button Grid.Column="2" Command="{Binding PasswordResetForm.TogglePassword}">
-                <StackPanel>
-                    <iconPacks:PackIconBootstrapIcons
-                        VerticalAlignment="Center"
-                        IsVisible="{Binding !PasswordResetForm.ShowPassword}"
-                        Kind="EyeFill" />
-
-                    <iconPacks:PackIconBootstrapIcons
-                        VerticalAlignment="Center"
-                        IsVisible="{Binding PasswordResetForm.ShowPassword}"
-                        Kind="EyeSlashFill" />
-                </StackPanel>
-            </Button>
-        </Grid>
 
         <Separator />
 
@@ -110,7 +111,7 @@
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="4" />
+                <ColumnDefinition Width="8" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
@@ -120,11 +121,7 @@
                 HorizontalContentAlignment="Center"
                 Command="{Binding NavigateBack}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons
-                        Width="16"
-                        Height="16"
-                        VerticalAlignment="Center"
-                        Kind="ArrowLeft" />
+                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="ArrowLeft" />
                     <TextBlock VerticalAlignment="Center" Text="Go Back" />
                 </StackPanel>
             </Button>
@@ -137,11 +134,7 @@
                 Command="{Binding ResetPassword}"
                 IsEnabled="{Binding PasswordResetForm.SentToken}">
                 <StackPanel Orientation="Horizontal">
-                    <iconPacks:PackIconBootstrapIcons
-                        Width="16"
-                        Height="16"
-                        VerticalAlignment="Center"
-                        Kind="Check2" />
+                    <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Check2" />
                     <TextBlock VerticalAlignment="Center" Text="Reset" />
                 </StackPanel>
             </Button>
