--- a/App/Voltflow/App.axaml
+++ b/App/Voltflow/App.axaml
@@ -2,6 +2,8 @@
     x:Class="Voltflow.App"
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:semi="https://irihi.tech/semi"
+    xmlns:u-semi="https://irihi.tech/ursa/themes/semi"
     xmlns:viewLocators="clr-namespace:Voltflow.ViewLocators"
     RequestedThemeVariant="Default">
 
@@ -10,8 +12,14 @@
     </Application.DataTemplates>
 
     <Application.Styles>
-        <!--  Use FluentTheme  -->
-        <FluentTheme />
+        <!--  Use SemiTheme with Ursa  -->
+        <semi:SemiTheme />
+        <u-semi:SemiTheme />
+
+        <!--  Include Semi.Avalonia styles  -->
+        <StyleInclude Source="avares://Semi.Avalonia.ColorPicker/Index.axaml" />
+        <StyleInclude Source="avares://Semi.Avalonia.DataGrid/Index.axaml" />
+        <StyleInclude Source="avares://Semi.Avalonia.TreeDataGrid/Index.axaml" />
 
         <!--  Include styles (even for Icons from IconPacks.Avalonia)  -->
         <StyleInclude Source="avares://IconPacks.Avalonia/Icons.axaml" />
