--- a/App/Voltflow/Styles/IconStyle.axaml
+++ b/App/Voltflow/Styles/IconStyle.axaml
@@ -8,46 +8,53 @@
                 <!--  Light Theme  -->
                 <ResourceDictionary x:Key="Light">
                     <SolidColorBrush x:Key="ForegroundGray" Color="DimGray" />
+                    <SolidColorBrush x:Key="ForegroundGrayDisabled" Color="LightGray" />
                 </ResourceDictionary>
 
                 <!--  Dark Theme  -->
                 <ResourceDictionary x:Key="Dark">
                     <SolidColorBrush x:Key="ForegroundGray" Color="LightGray" />
+                    <SolidColorBrush x:Key="ForegroundGrayDisabled" Color="DimGray" />
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
     </Styles.Resources>
 
-    <!--  Gray Bootstrap icons  -->
+    <!--  Gray icon  -->
     <Style Selector="iconPacks|PackIconBootstrapIcons.color-gray">
         <Setter Property="Foreground" Value="{DynamicResource ForegroundGray}" />
     </Style>
 
-    <!--  Tiny Bootstrap icons  -->
+    <!--  Gray disabled icon  -->
+    <Style Selector="iconPacks|PackIconBootstrapIcons.color-gray:disabled">
+        <Setter Property="Foreground" Value="{DynamicResource ForegroundGrayDisabled}" />
+    </Style>
+
+    <!--  Tiny icon  -->
     <Style Selector="iconPacks|PackIconBootstrapIcons.size-xs">
         <Setter Property="Width" Value="10" />
         <Setter Property="Height" Value="10" />
     </Style>
 
-    <!--  Small Bootstrap icons  -->
+    <!--  Small icon  -->
     <Style Selector="iconPacks|PackIconBootstrapIcons.size-sm">
         <Setter Property="Width" Value="12" />
         <Setter Property="Height" Value="12" />
     </Style>
 
-    <!--  Medium (default) Bootstrap icons  -->
+    <!--  Medium icon  -->
     <Style Selector="iconPacks|PackIconBootstrapIcons.size-md">
         <Setter Property="Width" Value="14" />
         <Setter Property="Height" Value="14" />
     </Style>
 
-    <!--  Large Bootstrap icons  -->
-    <Style Selector="iconPacks|PackIconBootstrapIcons.size-l">
+    <!--  Large (default) icon  -->
+    <Style Selector="iconPacks|PackIconBootstrapIcons">
         <Setter Property="Width" Value="16" />
         <Setter Property="Height" Value="16" />
     </Style>
 
-    <!--  Extra large Bootstrap icons  -->
+    <!--  Extra large icon  -->
     <Style Selector="iconPacks|PackIconBootstrapIcons.size-xl">
         <Setter Property="Width" Value="18" />
         <Setter Property="Height" Value="18" />
