--- a/App/Voltflow/Styles/StackPanelStyle.axaml
+++ b/App/Voltflow/Styles/StackPanelStyle.axaml
@@ -1,5 +1,5 @@
 <Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!--  Default StackPanel style  -->
+    <!--  Default StackPanel  -->
     <Style Selector="StackPanel">
         <Setter Property="Spacing" Value="8" />
     </Style>
