--- a/App/Voltflow/Views/Forms/SignInForm.axaml
+++ b/App/Voltflow/Views/Forms/SignInForm.axaml
@@ -98,7 +98,7 @@
                 Grid.Column="2"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
-                Classes="color-green"
+                Classes="Success"
                 Command="{Binding SignIn}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Check2" />
