--- a/App/Voltflow/Views/Forms/SignUpForm.axaml
+++ b/App/Voltflow/Views/Forms/SignUpForm.axaml
@@ -157,7 +157,7 @@
                 Grid.Column="2"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
-                Classes="color-green"
+                Classes="Success"
                 Command="{Binding SignUp}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Check2" />
