--- a/App/Voltflow/Views/Forms/EmailVerificationForm.axaml
+++ b/App/Voltflow/Views/Forms/EmailVerificationForm.axaml
@@ -57,7 +57,7 @@
                 Grid.Column="2"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
-                Classes="color-green"
+                Classes="Success"
                 Command="{Binding VerifyEmail}">
                 <StackPanel Orientation="Horizontal">
                     <iconPacks:PackIconBootstrapIcons VerticalAlignment="Center" Kind="Check2" />
