--- a/App/Voltflow/Views/Forms/PasswordResetForm.axaml
+++ b/App/Voltflow/Views/Forms/PasswordResetForm.axaml
@@ -130,7 +130,7 @@
                 Grid.Column="2"
                 HorizontalAlignment="Stretch"
                 HorizontalContentAlignment="Center"
-                Classes="color-green"
+                Classes="Success"
                 Command="{Binding ResetPassword}"
                 IsEnabled="{Binding PasswordResetForm.SentToken}">
                 <StackPanel Orientation="Horizontal">
